Remove OAuth secrets and use env variables